# FuzzyBot

./: .travis.yml  CHANGELOG.md  FuzzyBot.cabal  LICENSE  README.md  stack-8.6.3.yaml
app/: Main.hs
src/: FuzzyBot.hs
